# flappyship

./: .clangd  .gitignore  CMakeLists.txt  README.md  main.c
tools/: hardcoder
